Minor bug fixes

--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,7 @@
 \usepackage{libertinus}
 \usepackage[scale = 0.85]{plex-mono}
 \usepackage{censor}
-\usepackage{biblatex}
+\usepackage[maxbibnames=99]{biblatex}
 
 \makeatletter
 
