--- a/sections/a.front/abstract.tex
+++ b/sections/a.front/abstract.tex
@@ -1,2 +1,2 @@
 
-The field of ontology engineering plays a crucial role in knowledge representation and has gained significant attention in recent years in many domains such as medicine and biology. The introduction of the Web Ontology Language as a W3C recommended has further enabled use cases for ontology engineering in the context of the semantic web. With the growing size and complexity of these ontologies, however, they become more susceptible to bugs, and it becomes harder to debug these defects. Moreover, in the context of the semantic web, automatic approaches to debugging ontologies are required for the combination of knowledge derived from conflicting sources. Axiom weakening is a technique that allows for a fine-grained repair of inconsistent ontologies. Its main advantage is that it repairs ontologies by making axioms less restrictive rather than by deleting them, employing refinement operators. This thesis, building on previously introduced axiom weakening for \ALC, presents an extension to the axiom weakening operator to deal with $\SROIQ$, the expressive and decidable description logic underlying OWL 2 DL. The main problem here is to ensure that the global constraints of \SROIQ are preserved in the weakening process, as not every weaker axiom can be inserted into an ontology without compromising them. A basic regularity-preserving weakening approach for \SROIQ is presented, and some alternatives are discussed. The thesis further describes briefly a prototype implementation, and basic experimental evaluations of the approach were performed and are discussed in this thesis. Additionally, the implementation of the presented axiom weakening techniques in the popular ontology editor, Protégé, is discussed.
+The field of ontology engineering plays a crucial role in knowledge representation and has gained significant attention in recent years in many domains such as medicine and biology. The introduction of the Web Ontology Language as a W3C recommended has further enabled use cases for ontology engineering in the context of the semantic web. With the growing size and complexity of these ontologies, however, they become more susceptible to bugs, and it becomes harder to debug these defects. Moreover, in the context of the semantic web, automatic approaches to debugging ontologies are required for the combination of knowledge derived from conflicting sources. Axiom weakening is a technique that allows for a fine-grained repair of inconsistent ontologies. Its main advantage is that it repairs ontologies by making axioms less restrictive rather than by deleting them, employing refinement operators. This thesis, building on previously introduced axiom weakening for \ALC, presents an extension to the axiom weakening operator to deal with $\SROIQ$, the expressive and decidable description logic underlying OWL 2 DL. The main problem here is to ensure that the global constraints of \SROIQ are preserved in the weakening process, as not every weaker axiom can be inserted into an ontology without compromising them. A basic regularity-preserving weakening approach for \SROIQ is presented, and some alternatives are discussed. The thesis further describes briefly a prototype implementation and presents the results of basic experimental evaluations. Additionally, the implementation of the presented axiom weakening techniques as a plugin for the popular ontology editor, Protégé, is discussed.
