--- a/sections/b.main/1.introduction.tex
+++ b/sections/b.main/1.introduction.tex
@@ -1,5 +1,5 @@
 
-The field of ontologies plays a crucial role in knowledge representation and has gained significant attention in recent years in many domains, and especially in biology and medicine. The introduction of the Web Ontology Language as a World Wide Web Consortium (W3C) recommendation has further grown the ecosystem and enabled use cases for ontology engineering in the context of the semantic web.
+The field of ontologies plays a crucial role in knowledge representation and has gained significant attention in recent years in many domains, such as in biology and medicine. The introduction of the Web Ontology Language as a World Wide Web Consortium (W3C) recommendation has further grown the ecosystem and enabled use cases for ontology engineering in the context of the semantic web.
 
 Ontologies provide a structured and formalized way to represent knowledge about particular domains and facilitate automatic reasoning and knowledge sharing. Nevertheless, the development and maintenance of ontologies is not without challenges. With the growing size and complexity of these ontologies, they become more susceptible to bugs, and it becomes harder to debug these defects. Furthermore, in the context of the semantic web, automatic approaches to correcting ontologies are needed for the combination of conflicting knowledge derived from independent sources.
 
