--- a/sections/a.front/acknowledgments.tex
+++ b/sections/a.front/acknowledgments.tex
@@ -1,10 +1,8 @@
 
-\blackout{
-I would like to express my gratitude to my supervisors, Oliver Kutz and Nicolas Troquard, for their invaluable guidance, support, and encouragement throughout the duration of this bachelor thesis. Their insightful suggestions and feedback have been instrumental in shaping the direction of this work. I am particularly grateful for their proposal of the topic and their assistance in producing a paper, which provided me with invaluable exposure to the research community.
+I would like to thank Oliver Kutz and Nicolas Troquard, for their invaluable guidance and support throughout the duration of this thesis. Their insightful suggestions and feedback have been instrumental in shaping the direction of this work. I am particularly grateful for their proposal of the topic and their assistance in producing a paper, which provided me with invaluable exposure to the research community.
 
-I would also like to extend my appreciation to my fellow students. Their motivation and willingness to exchange ideas have greatly enriched my experience and contributed to the development of this thesis.
+I would also like to extend my appreciation to my fellow students. Their motivation and willingness to exchange ideas have enriched my experience and contributed to the development of this thesis.
 
-Furthermore, I would like to thank my parents and family for their support, belief in my abilities, and constant encouragement throughout my studies. I am deeply grateful for their understanding and patience.
+Furthermore, I would like to thank my parents and family for their support, belief in my abilities, and constant encouragement throughout my studies. I am grateful for their understanding and patience.
 
-Finally, I would like to acknowledge the contributions of all the individuals whose work has been utilized in this thesis. Their research, publications, and work in their respective fields have provided the foundation upon which this thesis is built. I am grateful for their commitment to advancing knowledge and their contributions to the community.
-}
+Finally, I would like to acknowledge the contributions of all the individuals whose work has been utilized in this thesis. Their research, publications, and other works in their respective fields have provided the foundation upon which this thesis is built.
